--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-4bb6ce47.js">
+		<link rel="modulepreload" href="./_app/immutable/start-63fcf3c8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
@@ -66,7 +66,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-1138e51d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-0dede615.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-e82f3923.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9ae4a771.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/marked.esm-0b02a870.js"><title>UTXO.23 - Otevřená komunitní kryptoměnová konference</title><!-- HEAD_svelte-1y6gd31_START --><!-- HEAD_svelte-1y6gd31_END -->
@@ -428,7 +428,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-tesar-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Tesař"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
 
 
 
@@ -454,7 +454,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/milan-marcak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-etheri-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
 
 
 
@@ -467,7 +467,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
 
 
 
@@ -480,7 +480,150 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.png" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/sodomak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Půlkrábek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/anna-pichova-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Anna Píchová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
 
 
 
@@ -519,7 +662,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-tesar-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Tesař"></div>
 
 
 
@@ -532,202 +675,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-pilny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-etheri-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.png" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-olbrech-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Olbrech"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-matejka-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Matejka"></div>
 
 
 
@@ -753,6 +701,32 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jana-kubatova-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jana Kubátová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/damsky-web.png" class="w-16 h-16 rounded-lg m-auto" alt="damsky"></div>
 
 
@@ -766,7 +740,33 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
 
 
 
@@ -813,7 +813,7 @@
 
 
 </a>
-          <div class="text-center text-sm uppercase font-bold">Coinmate</div>
+          <div class="text-center text-sm uppercase font-bold mt-3">Coinmate</div>
         </div></div>
     <div class="mt-6 text-center">Sponzoři</div>
     <div class="mt-6 flex flex-wrap gap-8 justify-center"><div class="w-32"><a href="https://whalebooks.com/" target="_blank" rel="noreferrer"><div class="w-20 shadow-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/whalebooks-web.svg" class="w-20 shadow-xl rounded-xl m-auto" alt="Whalebooks"></div>
@@ -1092,14 +1092,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="t0gu1a">
-			import { start } from "./_app/immutable/start-4bb6ce47.js";
+		<script type="module" data-sveltekit-hydrate="mvyp84">
+			import { start } from "./_app/immutable/start-63fcf3c8.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="t0gu1a"]').parentNode,
-				version: "1683811106242",
+				target: document.querySelector('[data-sveltekit-hydrate="mvyp84"]').parentNode,
+				version: "1683816445624",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
